examples/scope.ayl
say x = 4

ayla x == 4 {
    say y = 2
    putln(y) // 2

    x = 3
    putln(x) // 3

    say x = 2
    putln(x) // 2
}

putln(x) // 3

putln(y) // error: undefined